# garmin-cli

./: LICENSE  QUICKSTART.md  README.md  demo.sh  demo_log.txt  demo_ui.json  demo_ui.xml  pyproject.toml
src/garmin_dev/: __init__.py  __main__.py  cli.py
